--- a/.env
+++ b/.env
@@ -2,5 +2,15 @@ RABBITMQ_DEFAULT_USER=user
 RABBITMQ_DEFAULT_PASS=password
 RABBITMQ_USER=user
 RABBITMQ_PASS=password
-RABBITMQ_HOST=localhost:5672
+RABBITMQ_HOST=rabbitmq:5672
 RABBITMQ_AUTH_QUEUE=auth_queue
+
+
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=microservices
+
+POSTGRES_URI=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+
+PGADMIN_DEFAULT_EMAIL=chinmay@gmail.com
+PGADMIN_DEFAULT_PASSWORD=password
