i added feedback microservice by myself and it worked

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ RABBITMQ_USER=user
 RABBITMQ_PASS=password
 RABBITMQ_HOST=rabbitmq:5672
 RABBITMQ_AUTH_QUEUE=auth_queue
+RABBITMQ_FEEDBACK_QUEUE=feedback_queue
 
 
 POSTGRES_USER=user
@@ -11,6 +12,18 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=microservices
 
 POSTGRES_URI=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+POSTGRES_URI_FOR_FEEDBACK=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
 PGADMIN_DEFAULT_EMAIL=chinmay@gmail.com
 PGADMIN_DEFAULT_PASSWORD=password
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/feedback2023?schema=public"
+
