--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,21 @@ services:
       - /usr/src/app/node_modules
     command: npm run start:dev auth
 
+  feedback:
+    build:
+      context: ./
+      dockerfile: ./apps/feedback/Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - rabbitmq
+      - postgres
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    command: npm run start:dev feedback
+
+
   api:
     build:
       context: ./
