prisma completely removed from here temporary

--- a/.env
+++ b/.env
@@ -25,5 +25,6 @@ PGADMIN_DEFAULT_PASSWORD=password
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/feedback2023?schema=public"
+DATABASE_URL="file:./dev.db"
 
+#DATABASE_URL="postgres://myuser:mypassword@localhost:5432/median-db"
