--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
     "prettier": "^2.3.2",
+    "prisma": "^4.9.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
@@ -81,5 +82,8 @@
     "moduleNameMapper": {
       "^@app/shared(|/.*)$": "<rootDir>/libs/shared/src/$1"
     }
+  },
+  "prisma": {
+    "seed": "ts-node prisma/feedbackSeed.ts"
   }
 }
